# Swapify

./: .gitignore  Dockerfile  README.md  camera.py  docker-compose.yml  docker.sh  pyproject.toml  supervisord.conf  test_camera.py
app/: main.py
app/api/: api.py
app/api/endpoints/: face_swap.py  health.py
app/core/: config.py
app/gradio/: __init__.py  app.py
app/services/: swapper.py
app/streamlit/: streamlit_ui.py
src/: main.py
src/api/endpoints/: face_swap.py
src/services/: swapper.py
src/streamlit/: streamlit_ui.py
