[project]
name = "swapify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "insightface>=0.7.3",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.45.1",
    "supervisor>=4.2.5",
    "uvicorn>=0.34.3",
]
